package com.hicx.batch;

public interface BatchVisitor {
    void visit(StringBatchData batchData);
}
