package com.hicx.stat;

public interface Printable {
    void print();
}
