package com.hicx.stat;

import com.hicx.batch.BatchVisitor;

public interface Statistic extends Printable, BatchVisitor {

}
